--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -14,78 +14,73 @@
 
 
     <!-- Bootstrap core CSS -->
-      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="{% static 'blog/bootstrap/bootstrap.min.css' %}">
+      <link rel="stylesheet" href="{% static 'blog/font-awesome/css/font-awesome.min.css' %}">
+      <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;subset=cyrillic" rel="stylesheet">
       <link rel="stylesheet" href="{% static 'blog/main.css' %}">
-  <link rel="stylesheet" href="{% static 'blog/font-awesome/css/font-awesome.min.css' %}">
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
-
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 
     <!-- Custom styles for this template -->
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
-
-{#    <nav class="navbar navbar-inverse navbar-fixed-top">#}
-{#      <div class="container">#}
-{#        <div class="navbar-header">#}
-{#          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">#}
-{#            <span class="sr-only">Toggle navigation</span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#            <span class="icon-bar"></span>#}
-{#          </button>#}
-{#          <a class="navbar-brand" href=" {% url 'home' %}">MyBlog</a>#}
-{#        </div>#}
-{#        <div id="navbar" class="collapse navbar-collapse">#}
-{#          <ul class="nav navbar-nav">#}
-{#            <li class="active"><a href="{% url 'home' %}">Home</a></li>#}
-{#            <li><a href="{% url 'about' %}">About</a></li>#}
-{#          </ul>#}
-{#        </div><!--/.nav-collapse -->#}
-{#      </div>#}
-{#    </nav>#}
-
 <header id="header">
-    <nav class="navbar navbar-static-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="{% url 'home' %}">
-                    <img src="{% static 'blog/img/logo.png' %}"></a>
-            </div>
-            <div class="navbar-collapse collapse container-fluid nav-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="{% url 'home' %}" class="active">Home</a></li>
-                    <li><a href="{% url 'about' %}">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Team</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <div class="container">
+    <nav class="navbar navbar-default">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+					</button>
+
+					<a class="navbar-brand" href="#header">
+						<img src="{% static 'blog/img/logo.png' %}"></a>
+					</div>
+
+					<div class="navbar-collapse collapse nav-collapse collapse">
+						<ul class="nav navbar-nav navbar-left">
+							<li><a href="#header" class="active">Hello</a></li>
+							<li><a href="#about_us">About</a></li>
+							<li><a href="#services">Services</a></li>
+							<li><a href="#portfolio_all">Portfolio</a></li>
+							<li><a href="#team">Team</a></li>
+							<li><a href="#blog">Blog</a></li>
+							<li><a href="#contact">Contact</a></li>
+						</ul>
+                        <ul class="nav navbar-nav navbar-right">
+
+                            <li class="border-left"><a href="#services"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="#services"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li class="border-right"><a href="#services"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user" aria-hidden="true"></i></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+					</div>
+
+			</nav>
+</div>
 </header>
 
-    <div class="container content_all">
+    <div class="container">
         {% block content %}
-        
         {% endblock %}
+    <div class="col-md-3 menu_all">
+            <div class="menu">
+                fixed position<br>
+                fixed position<br>
+                fixed position<br>
+            </div>
+        </div>
     </div><!-- /.container -->
 
 
@@ -93,7 +88,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="{% static 'blog/js/bootstrap.min.js' %}"></script>
   </body>
 </html>
 
